# hailo-camera-apps

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.rst  bitbucket-pipelines.yml  build_docker.sh  build_docker_internal.sh  create_deb_package.sh
apps/h15/gstreamer/basic_security_camera_streaming/configs/: encoder_config_4k_no_osd.json  encoder_config_4k_single_stream_osd.json  encoder_config_fhd_no_osd.json  encoder_config_sink_4k.json  encoder_config_sink_hd.json  encoder_config_sink_sd.json  frontend_config.json  frontend_config_single_stream_4k.json  vision_config.json  vision_config1.json  vision_config2.json
apps/h15/gstreamer/classification/: classification.sh
apps/h15/native/: meson.build
apps/h15/native/ai_example_app/: README.rst  main.cpp  meson.build
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/HDR/: HDR_profile.json  webserver_HDR_profile.json
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/HDR/tuning/: Sensor0_Entry.cfg
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/IR/: IR_profile.json
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/daylight/: daylight_profile.json  webserver_daylight_profile.json
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/daylight/tuning/: Sensor0_Entry.cfg
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/lowlight/: lowlight_r0225c5_profile.json  lowlight_r0225c8_profile.json  lowlight_small_profile.json  webserver_lowlight_profile.json
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/lowlight/tuning/: Sensor0_Entry.cfg
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/lowlight_r0724c15/: lowlight_r0724c15_profile.json
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/profiles/lowlight_r0724c15/tuning/: Sensor0_Entry.cfg
apps/h15/native/ai_example_app/cfg/imx678/theia_sl410m/4k/shared/codecs/: encoder_config.json  encoder_osd_sink0.json
apps/h15/native/ai_example_app/cfg/medialib_configs/: ai_example_medialib_config.json  webserver_medialib_config.json
apps/h15/native/ai_example_app/configs/: encoder_osd_sink0.json  encoder_osd_sink1.json  encoder_osd_sink3.json  frontend_config.json  frontend_config_denoise.json  frontend_config_hdr.json  medialib_config.json  profile.json  profile_denoise.json  profile_hdr.json
apps/h15/native/ai_example_app/docs/: app_structure.rst  pipeline.rst
apps/h15/native/internals/: meson.build
apps/h15/native/internals/crops_without_ai/: main.cpp  meson.build
apps/h15/native/reference_camera_api/: meson.build  reference_camera_infra.cpp  reference_camera_logger.cpp
apps/h15/native/reference_camera_api/pipeline_infra/: aggregator_stage.hpp  ai_stage.hpp  buffer.hpp  dsp_stages.hpp  encoder_stage.hpp  file_module.hpp  file_stage.hpp  frontend_stage.hpp  output_module.hpp  overlay_native.hpp  overlay_stage.hpp  persist_stage.hpp  pipeline.hpp  postprocess_stage.hpp  queue.hpp  reference_camera_logger.hpp  stage.hpp  stage_debug.hpp  udp_module.hpp  udp_stage.hpp
apps/h15/native/webserver/: main.cpp  meson.build
apps/h15/native/webserver/common/: common.cpp  common.hpp  logger_macros.hpp  webserver_logger.cpp
apps/h15/native/webserver/common/httplib/: httplib_utils.cpp  httplib_utils.hpp
apps/h15/native/webserver/common/isp/: common.cpp  common.hpp
apps/h15/native/webserver/pipeline/: base_pipeline.cpp  base_pipeline.hpp  cpp_pipeline.cpp  cpp_pipeline.hpp  cpp_pipeline_event_handle.cpp  gst_pipeline.cpp  gst_pipeline.hpp  gst_pipeline_event_handle.cpp  pipeline.cpp  pipeline.hpp  pipeline_event_handle.cpp  pipeline_interface.cpp
apps/h15/native/webserver/pipeline/stages/: convert_rtp_module.cpp  convert_rtp_module.hpp  pipeline_builder.cpp  pipeline_builder.hpp  webrtc_stage.cpp  webrtc_stage.hpp
apps/h15/native/webserver/resources/: ai.cpp  ai.hpp  configs.cpp  configs.hpp  configs_base.cpp  configs_medialib.cpp  configs_res.cpp  encoder.cpp  encoder.hpp  encoder_control.cpp  frontend.cpp  frontend.hpp  isp.cpp  isp.hpp  osd.cpp  osd_res.hpp  privacy_mask.cpp  privacy_mask.hpp  resources.hpp  webpage.cpp  webpage.hpp  webrtc.cpp  webrtc.hpp
apps/h15/native/webserver/resources/common/: event_bus.cpp  event_bus.hpp  events_utils.hpp  repository.cpp  repository.hpp  resources.hpp  v4l2_ctrl.cpp  v4l2_ctrl.hpp
apps/h15/verification/: main.cpp  meson.build  tests_utils.cpp  webserver_test.cpp  webserver_test.hpp
apps/h15/verification/payloads/: encoder.json  frontend.json  osd.json  privacy_mask.json
apps/h8/gstreamer/general/: general.rst
apps/h8/gstreamer/imx8/: imx8.rst
apps/h8/gstreamer/raspberrypi/: raspberrypi.rst
apps/h8/gstreamer/rockchip/: rockchip.rst
core/hailo/: meson.build  meson_options.txt
core/hailo/apps/hailo15/: meson.build
core/hailo/apps/hailo15/chaos_app/: chaos_app.cpp  meson.build
core/hailo/apps/hailo15/chaos_app/utils/: common.hpp  scenarios.hpp  vision_config_changes.hpp
core/hailo/apps/hailo15/eis_stress/: common_struct.hpp  eis_stress.cpp  meson.build
core/hailo/apps/hailo15/stress_app/: meson.build  stress_app.cpp
core/hailo/apps/hailo15/vision_preproc_applications/: dynamic_changes_update.cpp  meson.build
core/hailo/libs/postprocesses/: meson.build
core/hailo/plugins/cropping/: gsthailobasecropper.cpp
docker/: Dockerfile.tappas_base  Dockerfile.tappas_debian_packaging_preparations
docs/installation/: installation.rst
downloader/: common.py
downloader/config/: config.py
packaging/deb/: create_deb_package.py
packaging/deb/tappas/control_scripts/: control
scripts/gstreamer/: install_hailo_gstreamer.sh
scripts/misc/pkg_config/: hailo_tappas.pc_template
tools/build_tools/releaser/: create_release.py  release_manipulations_rules.yaml  release_rules_model.py  run.sh
tools/build_tools/tappas_sphinx/: build_doc.py  conf.py  index.rst
tools/build_tools/tappas_sphinx/copyright/: copyright_message.rst
tools/cross_compiler/: common.py  cross_compile_native_apps.py  cross_compile_tappas.py  cross_compile_verification.py
(+96 files in other folders)
